Fix information alignment

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -10,7 +13,25 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+
 }
+
+.container {
+  display:flex;
+  flex-direction: row;
+  gap: 52px;
+}
+
+.box{
+display: flex;
+flex-direction: column;
+align-items: center;
+max-width: 200px; 
+text-align: center;
+}
+
+
 
 /* do not edit this footer */
 .footer {
